# geo

./: .gitignore  00_processing_KML.ipynb  01_processing_KML.ipynb  02_processing_KML.ipynb  CHANGELOG.md  CLAUDE.md  DEPLOY_NOW.md  DOCUMENTATION_SUMMARY.md  FIXED_READY_TO_DEPLOY.md  GITHUB_PAGES_DEPLOY.md  GITHUB_PAGES_FIX.md  QUICK_REFERENCE.md  README.md  USER_GUIDE.md  apelos.qgz  fix-and-deploy.sh  process.ipynb  pyproject.toml
.github/workflows/: deploy.yml
docs/: DOCUMENTATION_ORGANIZATION_SUMMARY.md  README.md
docs/api/: api-reference.md
pre-processed_data/: apelos.geojson  apelos_pres_vargas.geojson  apelos_tese.geojson
processed_data/: apelos_clean.geojson  apelos_clean_tese.geojson  apelos_coletivos_roxo.geojson  apelos_lines.geojson  apelos_lines_bancos.geojson  apelos_points.geojson  apelos_points_apelos_individuais.geojson  apelos_points_associacao_comercial.geojson  apelos_points_bancos.geojson  apelos_points_comerciantes.geojson  apelos_points_igrejas.geojson  apelos_points_sind_comercio_e_industria.geojson  apelos_pres_vargas_clean.geojson  filtro_bairros.geojson  filtro_surrounding.geojson  limite_municipio_tese.geojson
raw_data/: Estado Novo - mapeamento dos apelos p_ Cris-2.kml  Estado Novo - mapeamento dos apelos-3.kml  Estado Novo - mapeamento dos apelos-4.kml  Estado Novo - mapeamento dos apelos.kml  Presidente Vargas - mapeamento dos apelos p_ Cris-7.kml  Presidente Vargas - mapeamento dos apelos p_ Cris-8.kml  Presidente Vargas - mapeamento dos apelos p_ Cris.kml
web/: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  DOCS_INDEX.md  DOCUMENTATION.md  Dockerfile  QUICK_START.md  README.md  docker-compose.yml  env.example  index.html  netlify.toml  nginx.conf  package.json  setup.sh  tsconfig.json  vercel.json  vite.config.ts
web/src/: main.ts  (+2 more)
(+18 files in other folders)
